# Video-Editor-App

./: CMakeLists.txt  README.md
Files/: input.txt
src/: FFmpegHandler.cpp  FFmpegHandler.h  FFmpegWorker.cpp  FFmpegWorker.h  FileImportWidget.cpp  FileImportWidget.h  FileManager.cpp  FileManager.h  FilterSettings.cpp  FilterSettings.h  FilterSettingsDialog.cpp  FilterSettingsDialog.h  GradientPalette.cpp  GradientPalette.h  MainWindow.cpp  MainWindow.h  PreviewSlider.cpp  PreviewSlider.h  SettingsDialog.cpp  SettingsDialog.h  SpeedDialog.cpp  SpeedDialog.h  SpeedWidget.cpp  SpeedWidget.h  TextOverlayItem.cpp  TextOverlayItem.h  TextOverlayWidget.cpp  TextOverlayWidget.h  TimelineWidget.cpp  TimelineWidget.h  Track.cpp  Track.h  VideoEditor.cpp  VideoEditor.h  VideoFrameWidget.cpp  VideoFrameWidget.h  VideoPlayerWidget.cpp  VideoPlayerWidget.h  VideoSegmentItem.cpp  VideoSegmentItem.h  (+9 more)
ui/: MainWindow.ui  TimelineWidget.ui  VideoPlayerWidget.ui  filehandler.ui
